content/docs/v2026.7.10/guides/postgres/scaling/vertical-scaling/overview/index.md
---
title: Postgres Vertical Scaling Overview
menu:
  docs_v2026.7.10:
    identifier: guides-postgres-scaling-vertical-overview
    name: Overview
    parent: guides-postgres-scaling-vertical
    weight: 10
menu_name: docs_v2026.7.10
section_menu_id: guides
info:
  autoscaler: v0.51.0
  cli: v0.66.0
  dashboard: v0.42.0
  installer: v2026.7.10
  ops-manager: v0.53.0
  product: kubedb
  provisioner: v0.66.0
  schema-manager: v0.42.0
  ui-server: v0.42.0
  version: v2026.7.10
  webhook-server: v0.42.0
---

> New to KubeDB? Please start [here](/docs/v2026.7.10/README).

# Vertical Scaling Postgres

This guide will give you an overview of how KubeDB Ops Manager updates the resources(for example Memory, CPU etc.) of the `Postgres` database server.

## Before You Begin

- You should be familiar with the following `KubeDB` concepts:
  - [Postgres](/docs/v2026.7.10/guides/postgres/concepts/postgres)
  - [PostgresOpsRequest](/docs/v2026.7.10/guides/postgres/concepts/opsrequest)

## How Vertical Scaling Process Works

The following diagram shows how the `KubeDB` Ops Manager used to update the resources of the `Postgres` database server. Open the image in a new tab to see the enlarged version.

<figure align="center">
  <img alt="Vertical scaling Flow" src="/docs/v2026.7.10/guides/postgres/scaling/vertical-scaling/overview/images/pg-vertical-scaling.png">
<figcaption align="center">Fig: Vertical scaling process of Postgres</figcaption>
</figure>

The vertical scaling process consists of the following steps:

1. At first, a user creates a `Postgres` cr.

2. `KubeDB` community operator watches for the `Postgres` cr.

3. When it finds one, it creates a `PetSet` and related necessary stuff like secret, service, etc.

4. Then, in order to update the resources(for example `CPU`, `Memory` etc.) of the `Postgres` database the user creates a `PostgresOpsRequest` cr.

5. `KubeDB` Ops Manager watches for `PostgresOpsRequest`.

6. When it finds one, it halts the `Postgres` object so that the `KubeDB` Provisioner operator doesn't perform any operation on the `Postgres` during the scaling process.

7. Then the `KubeDB` Ops Manager operator will update resources of the PetSet replicas to reach the desired state.

8. After successful updating of the resources of the PetSet's replica, the `KubeDB` Ops Manager updates the `Postgres` object resources to reflect the updated state.

9. After successful updating of the `Postgres` resources, the `KubeDB` Ops Manager resumes the `Postgres` object so that the `KubeDB` Provisioner operator resumes its usual operations.

## Vertical Scaling Modes

KubeDB actuates vertical scaling in one of two modes, selected through the `spec.verticalScaling.mode`
field of the `PostgresOpsRequest`:

- **`Restart`** (default): The operator patches the `PetSet` with the new resources and restarts the
  Pods (one at a time, honoring the database's failover rules) so they come back with the updated CPU
  and Memory. This works on every Kubernetes cluster.
- **`InPlace`**: The operator resizes the running containers in place using the Kubernetes
  [in-place Pod resize](https://kubernetes.io/docs/tasks/configure-pod-container/resize-container-resources/)
  (`pods/resize` subresource) — no Pod restart, so scaling happens without downtime or failover. If a
  Node cannot accommodate the new resources (the resize is reported `Infeasible`), the operator
  automatically falls back to the `Restart` behavior for that Pod. For a **distributed** `Postgres`
  deployment, in-place resize is not possible, so `InPlace` automatically degrades to `Restart`.

If `spec.verticalScaling.mode` is omitted, it defaults to `Restart`.

> **Note:** `InPlace` mode relies on the Kubernetes `InPlacePodVerticalScaling` feature gate, which is
> enabled by default from Kubernetes v1.33. On older clusters, or when the feature gate is disabled,
> use `Restart` mode.

In the next doc, we are going to show a step by step guide on updating resources of Postgres database using vertical scaling operation.
